flux/apps/thumbor/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thumbor
spec:
  selector:
    matchLabels:
      app: thumbor
  template:
    metadata:
      labels:
        app: thumbor
    spec:
      containers:
        - name: thumbor
          image: ghcr.io/minimalcompact/thumbor
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: thumbor
