flux/apps/thumbor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thumbor
spec:
  selector:
    app: thumbor
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
